--- a/views/editshop.html
+++ b/views/editshop.html
@@ -40,10 +40,12 @@
         src="https://rawgit.com/Logicify/jquery-locationpicker-plugin/master/dist/locationpicker.jquery.js"></script>
     <script>
         $(document).ready(function () {
-            
-            
-            
-            
+
+
+
+
+
+
             //Map function
             $('#us3').locationpicker({
                 location: {
@@ -64,6 +66,25 @@
                 }
             });
         });
+        //img pre-upload
+        function previewFile() {
+            const preview = document.querySelector('#imgUpload');
+            const file = document.querySelector('input[type=file]').files[0];
+            const reader = new FileReader();
+
+            reader.addEventListener("load", function () {
+                // convert image file to base64 string
+                preview.src = reader.result;
+                $("#jumboIMG").css("background-image", `url(${reader.result})`);
+            }, false);
+
+            if (file) {
+                reader.readAsDataURL(file);
+            }
+        }
+
+
+
     </script>
 
 </head>
@@ -97,7 +118,8 @@
                     </div>
                 </nav>
                 <!--shop's background image will go here -->
-                <div class="jumbotron">
+                <div class="jumbotron" id="jumboIMG">
+                    <img src="" height="200" id="imgUpload" alt="Image preview...">
                     <h2>
                         Image
                     </h2>
@@ -105,7 +127,7 @@
                         This will put change's buttton in the image
                     </p>
                     <p>
-                        <a class="btn btn-primary btn-large" href="#">change</a>
+                        <input type="file" id="btnUploadimg" onchange="previewFile()"></input>
                     </p>
                 </div>
             </div>
@@ -132,18 +154,18 @@
             <!-- map -->
             <div id="us3" style="height: 400px;"></div>
             </label><button class="btn btn-primary mt-2">comfrim</button>
-        <!-- Edit details -->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="textarea">Edit details</label>
-            <div class="col-md-4">
-                <textarea class="form-control" id="textarea" name="textarea">default text</textarea>
+            <!-- Edit details -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="textarea">Edit details</label>
+                <div class="col-md-4">
+                    <textarea class="form-control" id="textarea" name="textarea">default text</textarea>
+                </div>
             </div>
+            <p>
+                <a class="btn" href="#">View details »</a>
+            </p>
         </div>
-        <p>
-            <a class="btn" href="#">View details »</a>
-        </p>
-    </div>
-        
+
     </div>
 
     <!-- Edit picture-->
