--- a/views/register_barber.html
+++ b/views/register_barber.html
@@ -34,6 +34,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
         integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
         crossorigin="anonymous"></script>
+        <script>
+            $(document).ready(function () {
+            $("button").click(function () {
+                const Fullname = $("#registerFullname").val();
+                const Email = $("#registerEmail").val();
+                const Phone = $("#registerPhone").val();
+                const Age = $("#registerAge").val();
+                const Password = $("#registerPassword").val();
+                const RepeatPassword = $("#repeatPassword").val();
+                
+                //connect to /register_barber service
+                $.ajax({
+                    type: "POST",
+                    url: "/register_user",
+                    data: "data",
+                    success: function (response) {
+                        //jump to editshop.html
+                        window.location.replace(data)
+                    },
+                    error: function(xhr){
+                        //show error message
+                        alert("please fill your information!!!")
+                    }
+                });
+            });
+        });
+        </script>
 </head>
 
 <body>
@@ -43,7 +70,7 @@
                 <h4 class="card-title mt-3 text-center">Create Account</h4>
                 <p class="text-center">Get started with your free account</p>
                 <p>
-                    <a href="/register_user" class="btn btn-primary btn-block"><i> Switch to user</i></a>
+                    <a href="/register_user.html" class="btn btn-primary btn-block"><i> Switch to user</i></a>
 
                 </p>
                 <p class="divider-text">
@@ -54,19 +81,19 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                         </div>
-                        <input name="" class="form-control" placeholder="Full name" type="text">
+                        <input name="" class="form-control" placeholder="Full name" type="text" id="registerFullname">
                     </div> <!-- form-group// -->
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
                         </div>
-                        <input name="" class="form-control" placeholder="Email address" type="email">
+                        <input name="" class="form-control" placeholder="Email address" type="email" id="registerEmail">
                     </div> <!-- form-group// -->
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-phone"></i> </span>
                         </div>
-                        <input name="" class="form-control" placeholder="Phone number" type="text">
+                        <input name="" class="form-control" placeholder="Phone number" type="text" id="registerPhone">
                     </div> <!-- form-group// -->
                     <div class="card card-cascade narrower">
 
@@ -97,18 +124,18 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
                         </div>
-                        <input class="form-control" placeholder="Create password" type="password">
+                        <input class="form-control" placeholder="Create password" type="password" id="registerPassword">
                     </div> <!-- form-group// -->
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
                         </div>
-                        <input class="form-control" placeholder="Repeat password" type="password">
+                        <input class="form-control" placeholder="Repeat password" type="password" id="repeatPassword">
                     </div> <!-- form-group// -->
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary btn-block"> Create Account </button>
                     </div> <!-- form-group// -->
-                    <p class="text-center">Have an account? <a href="/login">Log In</a> </p>
+                    <p class="text-center">Have an account? <a href="./login.html">Log In</a> </p>
                 </form>
             </article>
         </div> <!-- card.// -->
