--- a/views/register_user.html
+++ b/views/register_user.html
@@ -36,6 +36,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
         integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
         crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function () {
+            $("button").click(function () {
+                const Fullname = $("#registerFullname").val();
+                const Email = $("#registerEmail").val();
+                const Phone = $("#registerPhone").val();
+                const Age = $("#registerAge").val();
+                const Password = $("#registerPassword").val();
+                const RepeatPassword = $("#repeatPassword").val();
+                
+                //connect to /register_user service
+                $.ajax({
+                    type: "POST",
+                    url: "/register_user",
+                    data: "data",
+                    success: function (response) {
+                        //jump to index.html
+                        window.location.replace(data)
+                    },
+                    error: function(xhr){
+                        //show error message
+                        alert("please fill your information!!!")
+                    }
+                });
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -45,57 +72,58 @@
                 <h4 class="card-title mt-3 text-center">Create Account</h4>
                 <p class="text-center">Get started with your free account</p>
                 <p>
-                    <a href="/register_barber" class="btn btn-primary btn-block"><i> Switch to barber</i></a>
+                    <a href="/register_barber.html" class="btn btn-primary btn-block"><i> Switch to barber</i></a>
 
                 </p>
                 <p class="divider-text">
                     <span class="bg-light">Fill your information</span>
                 </p>
                 <form>
+                    <!-- form-group// -->
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                         </div>
-                        <input name="" class="form-control" placeholder="Full name" type="text">
+                        <input class="form-control" placeholder="Full name" type="text" id="registerFullname">
                     </div> <!-- form-group// -->
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
                         </div>
-                        <input name="" class="form-control" placeholder="Email address" type="email">
+                        <input class="form-control" placeholder="Email address" type="email" id="registerEmail">
                     </div> <!-- form-group// -->
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-phone"></i> </span>
                         </div>
-                        <input name="" class="form-control" placeholder="Phone number" type="text">
+                        <input class="form-control" placeholder="Phone number" type="text" id="registerPhone">
                     </div> <!-- form-group// -->
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-check"></i> </span>
                         </div>
-                        <select class="form-control">
+                        <select class="form-control" id="registerAge">
                             <option selected=""> Select your age</option>
                             <option>below 18</option>
                             <option>19-25</option>
                             <option>26+</option>
                         </select>
-                    </div> <!-- form-group end.// -->
+                    </div> <!-- form-group // -->
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
                         </div>
-                        <input class="form-control" placeholder="Create password" type="password">
+                        <input class="form-control" placeholder="Create password" type="password" id="registerPassword">
                     </div> <!-- form-group// -->
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
                         </div>
-                        <input class="form-control" placeholder="Repeat password" type="password">
+                        <input class="form-control" placeholder="Repeat password" type="password" id="repeatPassword">
                     </div> <!-- form-group// -->
                     <div class="card card-cascade narrower">
 
-                        <!--Card image-->
+                        <!--Card image //do it later-->
                         <div class="view view-cascade gradient-card-header blue-gradient">
                             <h5 class="mb-0">Location</h5>
                         </div>
@@ -120,7 +148,7 @@
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary btn-block"> Create Account </button>
                     </div> <!-- form-group// -->
-                    <p class="text-center">Have an account? <a href="/login">Log In</a> </p>
+                    <p class="text-center">Have an account? <a href="./login.html">Log In</a> </p>
                 </form>
             </article>
         </div> <!-- card.// -->
