add barber store details editor page functionality
Co-authored-by: Prezt Althfergus <foomxcom_@hotmail.com>
Co-authored-by: Noppasin Nilsri <spoky_2543@hotmail.com>

--- a/views/upcoming.html
+++ b/views/upcoming.html
@@ -44,7 +44,7 @@
                 <div class="card">
                     <div class="card-div d-flex flex-column">
                         <h3 class="font-weight-bold">Up coming appointment</h3> <span
-                            class="d-block text-center px-3">ช่วยคิดหน่อยว่าใส่ไรตรงนี้ดี ?</span>
+                            class="d-block text-center px-3">Find your appointment</span>
                     </div>
                     <div class="card-div-2">
                         <div class="px-1">
