--- a/views/bookappointment.html
+++ b/views/bookappointment.html
@@ -37,7 +37,48 @@
 </head>
 
 <body>
-    
+    <h1 class="text-center">Book appointment</h1>
+    <div class="container">
+        <!--choose service-->
+        <div class="my-3 p-3 bg-white rounded box-shadow">
+            <h6 class="border-bottom border-gray pb-2 mb-0">Select Service</h6>
+            <div class="form-group">
+                <div class="col-md-4">
+                    <div class="checkbox">
+                        <label for="checkboxes">
+                            <input type="checkbox" name="checkboxes" id="checkboxes1" value="1">
+                            Hair cut 100 bath <i class="fa fa-bath" ></i>
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label for="checkboxes">
+                            <input type="checkbox" name="checkboxes" id="checkboxes2" value="2">
+                            Hair dry 300 bath <i class="fa fa-bath" ></i>
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label for="checkboxes">
+                            <input type="checkbox" name="checkboxes" id="checkboxes3" value="3">
+                            Shape up 80 bath <i class="fa fa-bath" ></i>
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label for="checkboxes">
+                            <input type="checkbox" name="checkboxes" id="checkboxes4" value="4">
+                            Beard shave <i class="fa fa-bath" ></i>
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <!--choose date and time-->
+            <div class="my-3 p-3 bg-white rounded box-shadow">
+                <h6 class="border-bottom border-gray pb-2 mb-0">Select date and time</h6>
+                <div class="calendar"></div>
+            </div>
+            <!--Check out-->
+            <br><br><input type="button" class="btn btn-primary" value="Continue to payment">
+        </div>
+    </div>
 </body>
 
 </html>
