--- a/views/editshop.html
+++ b/views/editshop.html
@@ -34,32 +34,26 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
         integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
         crossorigin="anonymous"></script>
+
     <!--MAP CDN-->
     <script src="https://maps.google.com/maps/api/js?sensor=false&amp;libraries=places"></script>
     <script
         src="https://rawgit.com/Logicify/jquery-locationpicker-plugin/master/dist/locationpicker.jquery.js"></script>
+
+    <style>
+        .jumbotron {
+            height: 300px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            border-bottom: 1px solid #ff6a00
+        }
+    </style>
+
     <script>
+
+        var bannerImageFileName;
+        var bannerImage;
         $(document).ready(function () {
-          
-            
-            $('#submitPic')
-            .submit(function (e) {
-                $.ajax({
-            type: "file",
-            url: "/edit/shop",
-            data: "data",
-        }).done(
-            
-        ).fail(
-
-        );
-            });
-        
-
-
-
-
-
             //Map function
             $('#us3').locationpicker({
                 location: {
@@ -81,15 +75,21 @@
             });
         });
         //img pre-upload
+
         function previewFile() {
             const preview = document.querySelector('#imgUpload');
             const file = document.querySelector('input[type=file]').files[0];
             const reader = new FileReader();
+            // bannerImageFileName = event.target.files[0].name;
 
             reader.addEventListener("load", function () {
                 // convert image file to base64 string
-                preview.src = reader.result;
+                //preview.src = reader.result;
+
                 $("#jumboIMG").css("background-image", `url(${reader.result})`);
+
+                // Send reader.result to backend
+
             }, false);
 
             if (file) {
@@ -97,6 +97,82 @@
             }
         }
 
+        function sendToServer(event) {
+            const data = new FormData($('#bannerForm')[0]);
+
+            let shopDetails = {
+                user_id: (function () {
+                    if (sessionStorage.saloon_user_id != undefined) {
+                        return sessionStorage.saloon_user_id;
+                    } else {
+                        // Swal.fire("Please login first!");
+                        // window.location.replace('/login');
+                        return 1;
+                    }
+                })(),
+
+                shop_lat: $('#us3-lat').val(),
+                shop_long: $('#us3-lon').val(),
+                shop_name: $('#shopName').val(),
+                shop_details: $('#shopDetails').val(),
+                shop_services: services
+
+
+            };
+
+            console.log(shopDetails);
+
+            $.ajax({
+                type: "POST",
+                url: "/api/edit_shop",
+                data: data,
+                headers: {shop: JSON.stringify(shopDetails)},
+                contentType: false,
+                processData: false,
+                success: function (response) {
+                    alert("Image upload success!")
+                }
+            });
+        }
+
+        //service list store here 
+        var services = [];
+        //get service name from modal
+        function addService() {
+            //service, time, price
+            const name = $("#service").val();
+            const time = $("#time").val();
+            const price = $("#price").val();
+
+            services.push({
+                "name": name,
+                "time": time,
+                "price": price
+            });
+
+            $('#modalAddService').modal('toggle');
+            updateSerivceTable();
+            $("#service").val('');
+            $("#time").val('');
+            $("#price").val('');
+        }
+
+        //add service to table
+        function updateSerivceTable() {
+            let tr = `<tr>
+                <th>Service Name</th>
+                <th>Service Time</th>
+                <th>Price</th>
+            </tr>`;
+            for (i in services) {
+                tr += `<tr>
+                <td>${services[i].name}</td>
+                <td>${services[i].time}</td>
+                <td>${services[i].price}</td>
+                </tr>`;
+            }
+            $("#serviceList").html(tr);
+        }
 
 
     </script>
@@ -108,7 +184,7 @@
         <div class="row">
             <div class="col-md-12">
                 <!--navbar -->
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1">
@@ -123,32 +199,37 @@
                                 <a class="nav-link" href="#">Edit shop </a>
                             </li>
                         </ul>
-                        <form class="form-inline">
-                            <input class="form-control mr-sm-2" type="text" />
-                            <button class="btn btn-primary my-2 my-sm-0" type="submit">
-                                Search
-                            </button>
-                        </form>
+
                     </div>
                 </nav>
                 <!--shop's background image will go here -->
-                <div class="jumbotron" id="jumboIMG">
-                    <img src="" height="200" id="imgUpload" alt="Image preview...">
+                <div class="jumbotron" id="jumboIMG" alt="Image preview. . .">
+                    <!-- <img src="" height="200" id="imgUpload" alt="Image preview...">
                     <h2>
                         Image
                     </h2>
                     <p>
                         This will put change's buttton in the image
                     </p>
-                    <p>
-                        <input type="file" id="btnUploadimg" onchange="previewFile()"></input>
-                    </p>
+                     -->
                 </div>
+
+                <h5>Upload your banner</h5>
+                <form action="" id="bannerForm" enctype="multipart/form-data">
+                    <p><input type="file" id="btnUploadimg" name="fileUpload" onchange="previewFile()"></input></p>
+                </form>
+
+                <p><input type="button" id="" value="TestSend" onclick="sendToServer()"></p>
+
+
             </div>
         </div>
+
+
         <!-- Set location-->
 
-        <div class="container">
+        <div class="container mt-4">
+            <h4>Pick your shop location</h4>
             <div class="form-group">
                 <label class="control-label">Location:</label>
                 <input type="text" class="form-control" id="us3-address" />
@@ -166,113 +247,62 @@
             </div>
 
             <!-- map -->
-            <div id="us3" style="height: 400px;"></div>
-            </label><button class="btn btn-primary mt-2">comfrim</button>
+            <div id="us3" class="my-4" style="height: 400px;"></div>
+
             <!-- Edit details -->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="textarea">Edit details</label>
-                <div class="col-md-4">
-                    <textarea class="form-control" id="textarea" name="textarea">default text</textarea>
+                <label class="col-md-4 control-label h3" for="textarea">Edit shop details</label>
+                <div class="col-md-8">
+                    <input type="text" class="form-control my-2" name="" id="shopName" placeholder="Your shop name">
+                    <textarea class="form-control" id="shopDetails" name="textarea"
+                        style="height: 200px;" placeholder="Your shop details"></textarea>
                 </div>
             </div>
-            <p>
-                <a class="btn" href="#">View details »</a>
-            </p>
-        </div>
 
-    </div>
-
-    <!-- Edit picture-->
-    <div class="container">
-        <h2>
-            Edit picture
-        </h2>
-        <div class="album py-5 bg-light">
-            <div class="container">
-
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top"
-                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
-                                src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22288%22%20height%3D%22226%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20288%20226%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_175f6d47a96%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_175f6d47a96%22%3E%3Crect%20width%3D%22288%22%20height%3D%22226%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2296.8203125%22%20y%3D%22119.24375%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                                data-holder-rendered="true">
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top"
-                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]"
-                                src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22288%22%20height%3D%22226%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20288%20226%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_175f6d47a98%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_175f6d47a98%22%3E%3Crect%20width%3D%22288%22%20height%3D%22226%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2296.8203125%22%20y%3D%22119.24375%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                                data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top"
-                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]"
-                                src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22288%22%20height%3D%22226%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20288%20226%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_175f6d47a99%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_175f6d47a99%22%3E%3Crect%20width%3D%22288%22%20height%3D%22226%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2296.8203125%22%20y%3D%22119.24375%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                                data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
         <!-- Set service -->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="checkboxes">Edit Service </label>
-            <div class="col-md-4">
-                <div class="checkbox">
-                    <label for="checkboxes-0">
-                        <input type="checkbox" name="checkboxes" id="checkboxes-0" value="1">
-                        Option one
-                    </label>
+
+    </div>
+
+    <div class="container">
+        <h3>Service</h3>
+        <table id='serviceList' class="table table-striped">
+            <tr>
+                <th>Service Name</th>
+                <th>Service Time</th>
+                <th>Price</th>
+            </tr>
+
+        </table>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary btn-lg mb-4" data-toggle="modal" data-target="#modalAddService">
+            Add Service
+        </button>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="modalAddService" tabindex="-1" role="dialog" aria-labelledby="modelTitleId"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">ADD SERVICE</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
-                <div class="checkbox">
-                    <label for="checkboxes-1">
-                        <input type="checkbox" name="checkboxes" id="checkboxes-1" value="2">
-                        Option two
-                    </label>
+                <div class="modal-body">
+                    <!-- Body -->
+                    <input class="form-control mb-2" type="text" name="service" id="service" placeholder="Service name">
+                    <input class="form-control mb-2" type="number" name="time" id="time" placeholder="Time (In minute)">
+                    <input class="form-control mb-2" type="number" name="price" id="price" placeholder="Price">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" onclick="addService()">Add</button>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </body>
 
