finally (added fundamental functionality)
Co-authored-by: Prezt Althfergus <foomxcom_@hotmail.com>
Co-authored-by: Noppasin Nilsri <spoky_2543@hotmail.com>

--- a/views/editshop.html
+++ b/views/editshop.html
@@ -145,7 +145,12 @@
                     contentType: false,
                     processData: false,
                     success: function (response) {
-                        Swal.fire("Upload success!");
+                        Swal.fire("Upload success!").then(function() {
+                            window.location.href = "/login";
+                        });
+                    },
+                    error: function(xhr) {
+                        Swal.fire(xhr.responseText);
                     }
                 });
             }
