--- a/views/register_barber.html
+++ b/views/register_barber.html
@@ -35,8 +35,6 @@
         integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
         crossorigin="anonymous"></script>
     <script>
-        // store user_id from database when registered
-
 
         $(document).ready(function () {
             $("#btnCreateAccount").click(function () {
@@ -91,7 +89,7 @@
     <div class="container">
         <div class="card bg-light">
             <article class="card-body mx-auto" style="max-width: 400px;">
-                <h4 class="card-title mt-3 text-center">Create Account</h4>
+                <h4 class="card-title mt-3 text-center">Create Account as a Barber</h4>
                 <p class="text-center">Get started with your free account</p>
                 <p>
                     <a href="/register_user" class="btn btn-primary btn-block"><i> Switch to user</i></a>
@@ -142,7 +140,7 @@
                         <button type="button" id="btnCreateAccount" class="btn btn-primary btn-block"> Create Account
                         </button>
                     </div> <!-- form-group// -->
-                    <p class="text-center">Have an account? <a href="./login.html">Log In</a> </p>
+                    <p class="text-center">Have an account? <a href="/login">Log In</a> </p>
                 </form>
             </article>
         </div> <!-- card.// -->
