--- a/views/barber_appointment.html
+++ b/views/barber_appointment.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <!--Sweet alert-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/10.6.1/sweetalert2.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
@@ -22,7 +23,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-
+    <!--Sweet alert CDN-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/10.6.1/sweetalert2.min.js"></script>
 
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.min.js'></script>
 
@@ -30,32 +32,36 @@
 
 
     <script>
+        var appointments;
         
         $(document).ready(function () {
+            if (sessionStorage.user_id == undefined || sessionStorage.user_id == "undefined") {
+                Swal.fire("Please login first!").then(function () {
+                    window.location.replace("/login");
+                });
+            } else {
+
+            }
+
+            $.ajax({
+                type: "GET",
+                async: false,
+                url: "/api/get_barber_appointment_by_id/" + sessionStorage.user_id,
+                dataSrc: "",
+                success: function (response) {
+                    appointments = response;
+                }
+            });
+
             var calendarEl = document.getElementById('calendar');
             var calendar = new FullCalendar.Calendar(calendarEl, {
                 headerToolbar: { center: 'dayGridMonth,dayGridWeek,timeGridDay' },
                 initialView: 'dayGridWeek',
                 selectable: true,
-                dayMaxEventRows: true,
+                
                 nowIndicator: true,
-                events: [
-                    {
-                        id: '1',
-                        title: 'aa',
-                        start: '2020-12-01',
-                        end: '2020-12-02',
-                        
-                    },
-                    {
-                        id: '2',
-                        title: 'vv',
-                        start: '2020-12-03',
-                        end: '2020-12-04'
-                    }
-                ],
+                events: appointments,
 
-            
             });
 
             calendar.render();
@@ -77,6 +83,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Edit shop </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Log out </a>
                 </li>
             </ul>
 
