--- a/views/customer_appointment.html
+++ b/views/customer_appointment.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,89 +34,229 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
         integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
         crossorigin="anonymous"></script>
+
+    <!--MAP CDN-->
+    <script src="https://maps.google.com/maps/api/js?sensor=false&amp;libraries=places"></script>
+    <script
+        src="https://rawgit.com/Logicify/jquery-locationpicker-plugin/master/dist/locationpicker.jquery.js"></script>
+
+    <style>
+        /* Fix text-color in card body */
+        .text-gray {
+            color: #aaa
+        }
+    </style>
+    <script>
+
+
+
+        var appointments;
+        $(document).ready(function () {
+            console.log("checking..");
+            if (sessionStorage.user_id == undefined || sessionStorage.user_id == "undefined") {
+                Swal.fire("Please login first!").then(function () {
+                    window.location.replace("/login");
+                });
+            } else {
+
+            }
+
+            $.ajax({
+                type: "GET",
+                async: false,
+                url: "/api/get_appointment_list_by_id/" + sessionStorage.user_id,
+                dataSrc: "",
+                success: function (response) {
+                    appointments = response;
+                    makeAppList(appointments);
+                },
+                error: function (xhr) {
+                    Swal.fire(xhr.responseText);
+                }
+            });
+
+            function makeAppList(app) {
+                let appTemplate = ``;
+
+                for (i in app) {
+                    appTemplate += ` <a href="javascript:void(0)" class="appClass" app_id="${app[i].appointment_id}">
+                                    <li class="list-group-item">
+                                        <!-- Custom content-->
+                                        <div class="media align-items-lg-center flex-column flex-lg-row p-3">
+                                            <div class="media-body order-2 order-lg-1">
+                                                <h5 class="mt-0 font-weight-bold mb-2" >${app[i].appointment_date}</h5>
+                                                <p class="font-italic text-muted mb-0 small">Booking Details: ${app[i].appointment_details} <br> Booking Price: ${app[i].booking_totalprice}฿</p>
+                                                <div class="d-flex align-items-center justify-content-between mt-1">
+                                                    <h5>${app[i].store_name}</h5>
+                                                </div>
+                                            </div>
+                                        </div> <!-- End -->
+                                    </li> <!-- End -->
+                                </a>`;
+                }
+
+                $('#appList').html(appTemplate);
+            }
+
+            $('#appList').on('click', '.appClass', function (e) {
+                e.preventDefault();
+
+                let app_id;
+                for (i in appointments) {
+                    if (appointments[i].appointment_id == $(this).attr('app_id')) {
+                        app_id = i;
+                    }
+                }
+                const location = {
+                    lat: appointments[app_id].store_location_lat,
+                    lon: appointments[app_id].store_location_long
+                };
+                console.log(appointments[app_id].store_location_long);
+                $('#us3').locationpicker({
+                    setCenter: true,
+                    location: {
+                        latitude: location.lat,
+                        longitude: location.lon
+                    },
+
+                    radius: 0,
+                    enableAutocomplete: true,
+                    markerDraggable: false,
+                    onchanged: function (currentLocation, radius, isMarkerDropped) {
+                        // Uncomment line below to show alert on each Location Changed event
+                        //alert("Location changed. New location (" + currentLocation.latitude + ", " + currentLocation.longitude + ")");
+                    }
+                });
+
+                $('#modalAppointment').modal('toggle');
+
+            })
+
+
+
+        });
+    </script>
+
 </head>
 
 <body>
-    <!-- up coming appointment-->
+    <!--nav bar-->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark shadow">
+        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+            aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav mr-auto px-3 mt-2 mt-lg-0">
+                <li class="nav-item ">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/shop_list">Start Booking</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/customer_appointment">My Appointment<span
+                            class="sr-only">(current)</span></a>
+                </li>
+
+            </ul>
+    </nav>
+    <!-- My appointment-->
     <div class="container mt-5 mb-5">
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-div d-flex flex-column">
-                        <h3 class="font-weight-bold">Up coming appointment</h3> <span
+                        <h3 class="font-weight-bold text-center">My appointment</h3> <span
                             class="d-block text-center px-3">Find your appointment</span>
                     </div>
-                    <div class="card-div-2">
-                        <div class="px-1">
-                            <div class="search"> <i class="fa fa-search"></i> <input type="text" class="form-control"
-                                    placeholder="input your appointment"> <button
-                                    class="btn btn-primary">Search</button> </div>
-                        </div>
-                        <div class="px-1 mb-2">
-                            <div class="box d-flex justify-content-between align-items-center">
-                                <div> <i class="fa fa-clock-o"></i> <span>Shop s9</span> </div> <i class="fa fa-plus"></i>
+                    <div class="row my-3">
+                        <div class="col-lg-8 mb-3 mx-auto">
+                            <div class="input-group">
+                                <input class="form-control py-2 rounded-pill mr-1 pr-5" type="search" value=""
+                                    placeholder="Search" id="example-search-input">
+                                <span class="input-group-append">
+                                    <button class="btn rounded-pill border-0 ml-n5" type="button">
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                </span>
                             </div>
                         </div>
-                        <div class="px-1 mb-2">
-                            <div class="box d-flex justify-content-between align-items-center">
-                                <div> <i class="fa fa-clock-o"></i> <span>Shop s10</span> </div> <i class="fa fa-plus"></i>
-                            </div>
-                        </div>
-                        <div class="px-1 mb-2">
-                            <div class="box d-flex justify-content-between align-items-center">
-                                <div> <i class="fa fa-clock-o"></i> <span>Shop s9</span> </div> <i class="fa fa-plus"></i>
-                            </div>
-                        </div>
-                        <div class="px-1 mb-2">
-                            <div class="box d-flex justify-content-between align-items-center">
-                                <div> <i class="fa fa-clock-o"></i> <span>Shop s10</span> </div> <i class="fa fa-plus"></i>
-                            </div>
-                        </div>
+
                     </div>
+                    <div class="row">
+                        <div class="col-lg-8 mx-auto">
+                            <!-- List group-->
+                            <ul class="list-group shadow" id="appList">
+                                <!-- list group item-->
+                                <a href="javascript:void(0)" class="appClass" app_id="">
+                                    <li class="list-group-item">
+                                        <!-- Custom content-->
+                                        <div class="media align-items-lg-center flex-column flex-lg-row p-3">
+                                            <div class="media-body order-2 order-lg-1">
+                                                <h5 class="mt-0 font-weight-bold mb-2" id="id">Booking Date</h5>
+                                                <p class="font-italic text-muted mb-0 small">Booking info</p>
+                                                <div class="d-flex align-items-center justify-content-between mt-1">
+                                                    <h5>Shop name</h5>
+                                                </div>
+                                            </div>
+                                        </div> <!-- End -->
+                                    </li> <!-- End -->
+                                </a>
+                                <!-- list group item-->
+
+                            </ul> <!-- End -->
+                        </div>
+                    </div> <!-- end of row -->
+
                 </div>
             </div>
         </div>
     </div>
-     <!-- Past appointment-->
-    <div class="container mt-5 mb-5">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-div d-flex flex-column">
-                        <h3 class="font-weight-bold">Past appointment</h3> <span
-                            class="d-block text-center px-3">Find your appointment</span>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="modalAppointment" tabindex="-1" role="dialog" aria-labelledby="modelTitleId"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Appointment details</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!--shop details will go here-->
+                    <div id="modalAppointmentBody">
+
+                        <!-- <div class="form-group row">
+                            <div class="col-sm-6">
+                                <label class="control-label">Lat.:</label>
+                                <input type="text" class="form-control" id="us3-lat" />
+                            </div>
+                            <div class="col-sm-6">
+                                <label>Long.:</label>
+                                <input type="text" class="form-control" id="us3-lon" />
+                            </div>
+                        </div> -->
+
+                        <!-- map -->
+                        <div id="us3" class="my-4" style="height: 400px;"></div>
+
                     </div>
-                    <div class="card-div-2">
-                        <div class="px-1">
-                            <div class="search"> <i class="fa fa-search"></i> <input type="text" class="form-control"
-                                    placeholder="input your appointment"> <button
-                                    class="btn btn-primary">Search</button> </div>
-                        </div>
-                        <div class="px-1 mb-2">
-                            <div class="box d-flex justify-content-between align-items-center">
-                                <div> <i class="fa fa-clock-o"></i> <span>Shop s9</span> </div> <i class="fa fa-plus"></i>
-                            </div>
-                        </div>
-                        <div class="px-1 mb-2">
-                            <div class="box d-flex justify-content-between align-items-center">
-                                <div> <i class="fa fa-clock-o"></i> <span>Shop s10</span> </div> <i class="fa fa-plus"></i>
-                            </div>
-                        </div>
-                        <div class="px-1 mb-2">
-                            <div class="box d-flex justify-content-between align-items-center">
-                                <div> <i class="fa fa-clock-o"></i> <span>Shop s9</span> </div> <i class="fa fa-plus"></i>
-                            </div>
-                        </div>
-                        <div class="px-1 mb-2">
-                            <div class="box d-flex justify-content-between align-items-center">
-                                <div> <i class="fa fa-clock-o"></i> <span>Shop s10</span> </div> <i class="fa fa-plus"></i>
-                            </div>
-                        </div>
-                    </div>
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+
                 </div>
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
