--- a/views/register_user.html
+++ b/views/register_user.html
@@ -86,7 +86,7 @@
     <div class="container">
         <div class="card bg-light">
             <article class="card-body mx-auto" style="max-width: 400px;">
-                <h4 class="card-title mt-3 text-center">Create Account</h4>
+                <h4 class="card-title mt-3 text-center">Create Account as a Customer</h4>
                 <p class="text-center">Get started with your free account</p>
                 <p>
                     <a href="/register_barber" class="btn btn-primary btn-block"><i> Switch to barber</i></a>
@@ -138,15 +138,12 @@
                         <button type="button" id="btnCreateAccount" class="btn btn-primary btn-block"> Create Account
                         </button>
                     </div> <!-- form-group// -->
-                    <p class="text-center">Have an account? <a href="./login.html">Log In</a> </p>
+                    <p class="text-center">Have an account? <a href="/login">Log In</a> </p>
                 </form>
             </article>
         </div> <!-- card.// -->
 
     </div> <!-- form-group// -->
-
-
-
 
     </div>
     <!--container end.//-->
