add bg color @customer appointment + fix message

--- a/views/customer_appointment.html
+++ b/views/customer_appointment.html
@@ -41,11 +41,20 @@
         src="https://rawgit.com/Logicify/jquery-locationpicker-plugin/master/dist/locationpicker.jquery.js"></script>
 
     <style>
+        
+        /* Fix background-color in web */
+        body {
+            background: linear-gradient(to right, #c04848, #480048);
+            min-height: 100vh
+        }
+
         /* Fix text-color in card body */
         .text-gray {
             color: #aaa
         }
+ 
     </style>
+    
     <script>
 
 
