--- a/views/list_shop.html
+++ b/views/list_shop.html
@@ -324,8 +324,8 @@
                 <div class="container my-2">
                     <p class="h5">Pick an appointment date</p>
                     <input type="text" name="" data-provide="datepicker" class="form-control" id="datePick">
-                    <p class="h5">Booking details</p>
-                    <input type="text" name="" class="form-control" id="bookingDetails">
+                    <p class="h5">Booking details</p> 
+                    <input type="text" name="" class="form-control" id="bookingDetails" placeholder="Optional">
                     <hr>
                     <p class="h5">Total price</p>
                     <p class="h5" id="totalPrice">0฿</p>
