--- a/views/register_barber.html
+++ b/views/register_barber.html
@@ -34,6 +34,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
         integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
         crossorigin="anonymous"></script>
+
+    <style>
+        body {
+            background: linear-gradient(to right, #cffbff, #5b9dff);
+            min-height: 100vh
+        }
+
+        /* Fix text-color in card body */
+        .text-gray {
+            color: #aaa
+        }
+    </style>
+
     <script>
 
         $(document).ready(function () {
