@ bg color to login page

--- a/views/login.html
+++ b/views/login.html
@@ -35,6 +35,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
         integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
         crossorigin="anonymous"></script>
+    
+    <style>
+        /* Fix background-color in web */
+        body {
+            background: linear-gradient(to bottom, #fadc9d, #504918);
+            min-height: 100vh
+        }
+
+        /* Fix text-color in card body */
+        .text-gray {
+            color: #aaa
+        }
+    </style>
+    
+    
     <script>
         $(document).ready(function () {
             $("button").click(function () {
