last changes that working for presentation

--- a/views/editshop.html
+++ b/views/editshop.html
@@ -290,11 +290,11 @@
                 </div>
             </div>
             <!--  Picture  -->
-            <div class="from-group">
+            <!-- <div class="from-group">
                 <label class="col-md-8 control-label h3" for="textarea">Picture</label>
-                <!--img example of haircut--><div id="imgDetails"></div>
+                <div id="imgDetails"></div>
                 <p><input type="file" id="btnUploadimg" name="fileUpload" onchange=""></input></p>
-            </div>
+            </div> -->
 
 
         </div>
